<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.0.0</version>
    </parent>

    <groupId>com.photowey</groupId>
    <artifactId>popup</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <inceptionYear>2022</inceptionYear>

    <packaging>pom</packaging>

    <modules>
        <module>popup-bom</module>
    </modules>

    <!-- @formatter:off -->
    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
        <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
        <maven-license-plugin.version>3.0</maven-license-plugin.version>
        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
        <maven-resources-plugin.version>2.6</maven-resources-plugin.version>
        <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
        <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
        <maven-git-commit-id-plugin.version>4.9.10</maven-git-commit-id-plugin.version>

        <version>1.0.0-SNAPSHOT</version>
        <popup.version>1.0.0-SNAPSHOT</popup.version>

        <!-- spring boot -->
        <spring.boot.version>3.0.0</spring.boot.version>
        <spring.cloud.admin.version>3.0.0</spring.cloud.admin.version>
        <spring.cloud.loadbalancer.version>4.0.0</spring.cloud.loadbalancer.version>
        <!-- spring cloud -->
        <spring.cloud.version>2022.0.0</spring.cloud.version>
        <!-- spring cloud alibaba -->
        <spring.cloud.alibaba.version>2022.0.0.0-RC1</spring.cloud.alibaba.version>
    </properties>
    <!-- @formatter:on -->

    <dependencies>
    </dependencies>

    <dependencyManagement>
        <dependencies>
        </dependencies>
    </dependencyManagement>

    <distributionManagement>
        <repository>
            <id>dev</id>
            <name>local</name>
            <!--
                Example:
                `MAVEN_REPO` = `D:\software\maven\repo\repository`
                `MAVEN_REPO` = `/Users/photowey/xxx/maven/repo/repository`
            -->
            <url>file:///${env.MAVEN_REPO}</url>
        </repository>
    </distributionManagement>

    <scm>
        <url>https://github.com/photowey/popup</url>
        <connection>scm:git@github.com:photowey/popup.git</connection>
        <developerConnection>scm:git@github.com:photowey/popup.git
        </developerConnection>
    </scm>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <compilerArgument>-Xlint:unchecked</compilerArgument>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven-release-plugin.version}</version>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <useReleaseProfile>false</useReleaseProfile>
                    <generateReleasePoms>false</generateReleasePoms>
                    <tagNameFormat>@{project.version}</tagNameFormat>
                    <arguments>-DskipTests</arguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven-resources-plugin.version}</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>pem</nonFilteredFileExtension>
                        <nonFilteredFileExtension>pfx</nonFilteredFileExtension>
                        <nonFilteredFileExtension>p12</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
            </plugin>
            <plugin>
                <groupId>pl.project13.maven</groupId>
                <artifactId>git-commit-id-plugin</artifactId>
                <version>${maven-git-commit-id-plugin.version}</version>
                <executions>
                    <execution>
                        <id>git</id>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                        <phase>initialize</phase>
                    </execution>
                </executions>
                <configuration>
                    <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>${maven-license-plugin.version}</version>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>remove</goal>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <quiet>true</quiet>
                    <inlineHeader>
                        <![CDATA[
Copyright © 2022 the original author or authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
]]>
                    </inlineHeader>
                    <properties>
                        <email>photowey@gmail.com</email>
                    </properties>
                    <excludes>
                        <exclude>.gitignore</exclude>
                        <exclude>LICENSE</exclude>
                        <exclude>**/*.properties</exclude>
                        <exclude>**/*.yml</exclude>
                        <exclude>**/*.md</exclude>
                        <exclude>**/*.xml</exclude>
                        <exclude>**/*.png</exclude>
                        <exclude>**/*.jpg</exclude>
                        <exclude>**/*.sql</exclude>
                        <exclude>**/*.pub</exclude>
                        <exclude>**/*.pri</exclude>
                        <exclude>**/*.crt</exclude>
                        <exclude>**/*.pem</exclude>
                        <exclude>**/*.pfx</exclude>
                        <exclude>**/*.p12</exclude>
                        <exclude>**/*.jks</exclude>
                        <exclude>**/*.txt</exclude>
                        <exclude>**/*.dll</exclude>
                        <exclude>**/*.sh</exclude>
                        <exclude>**/*.cmd</exclude>
                        <exclude>**/*.bat</exclude>
                        <exclude>**/*.xls</exclude>
                        <exclude>**/*.xlsx</exclude>
                        <exclude>**/.mvn/**</exclude>
                        <!-- shared code -->
                        <exclude>**/shared/**/*.java</exclude>
                    </excludes>
                    <strictCheck>true</strictCheck>
                    <mapping>
                        <java>SLASHSTAR_STYLE</java>
                    </mapping>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>